tests/single_instruction_translation_validation/mcsema/register-variants-samereg/psignb_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:214:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %20)
            ^
0.02user 0.02system 0:00.14elapsed 37%CPU (0avgtext+0avgdata 27524maxresident)k
0inputs+16outputs (0major+3286minor)pagefaults 0swaps
